Fixed overflow display issue on index page

--- a/PhoneDirectory/wwwroot/css/site.css
+++ b/PhoneDirectory/wwwroot/css/site.css
@@ -322,6 +322,7 @@ a, .btn-link {
 .personnel-container {
     overflow: auto;
     padding-left: 100px;
+    max-height: 600px;
 }
 
 .title-stats {
